<resources>
    <string name="app_name">Movie App</string>
    <string name="see_all">See all</string>
    <string name="show_more">Show More</string>
    <string name="top_rated">Top Rated</string>
    <string name="title_recently_released">Recently Released</string>
    <string name="popular">Popular</string>
    <string name="tv_shows">TV Shows</string>
    <string name="search_hint">Search…</string>
    <string name="movies_chip">Movies</string>
    <string name="tv_shows_chip">TV Shows</string>
    <string name="actors_label">Actors</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_rating">Add Rating</string>
    <string name="change_rating">Change Rating</string>
    <string name="remove_rating">Remove Rating</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="place_of_birth">place of Birth</string>
    <string name="in">In %1$s</string>
    <string name="konwn_for">Known For</string>
    <string name="todo">TODO</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="born_on">Born on %1$s</string>
    <string name="biography">Biography</string>
    <string name="movies">Movies</string>
    <string name="best_of">Best of %1$s</string>
    <string name="actors">Actors</string>
    <string name="oops_no_internet">Oops! No Internet</string>
    <string name="description">Looks like you\'re offline Let\'s reconnect so \nyou don\'t miss out!</string>
    <string name="all_movies_of_actor">All Movies Of Actor</string>
    <string name="title_on_air">On The Air</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_mystery">Mystery</string>
    <string name="title_adventure">Adventure</string>
    <string name="title_trending">Trending</string>
    <string name="title_streaming">Now Streaming</string>
    <string name="title_upcoming">Upcoming Movies</string>
    <string name="title_matches_your_vibe">Matches Your Vibe</string>
    <string name="title_recently_viewed">You Recently Viewed</string>
    <string name="title_your_collections">Your Collections</string>
    <string name="featured_collections">Featured Collections</string>
    <string name="late_night_thrills">Late-Night Thrills</string>
    <string name="mind_bending_stories">Mind-Bending Stories</string>
    <string name="cinematic_masterpieces">Cinematic Masterpieces</string>
    <string name="family_night_picks">Family Night Picks</string>
    <string name="based_on_true_events">Based on True Events</string>
    <string name="feel_good_favorites">Feel-Good Favorites</string>
    <string name="title_celebrity">Celebrities</string>
    <string name="title_airing_today">Airing today</string>
    <string name="title_top_rated_tv_show">Top Rated TV Shows</string>
    <string name="text_movies">%s Movies</string>
    <string name="movies_label">Movies</string>
    <string name="series_label">Series</string>
    <string name="tv_shows_label">TV Shows</string>
    <string name="history_label">History</string>
    <string name="explore_label">Explore</string>
    <string name="trending_today_label">Trending Today</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="myList">My Lists</string>
    <string name="profile">My Profile</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="duration">%1$d Minutes</string>
    <string name="reviews">(%1$s reviews)</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Star Cast</string>
    <string name="similar_movies">You Might Also Like</string>
    <string name="rating_title">Did You Watch it?</string>
    <string name="reviews_title">Reviews</string>
    <string name="review">Reviews</string>
    <string name="top_reviews">Top Reviews</string>
    <string name="user_name">"@" %1$s</string>
    <string name="save_button">back button</string>
    <string name="view_all_reviews">View all reviews</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Latest Seasons</string>
    <string name="submit_toast">Submitted, Thank you for your feedback</string>
    <string name="total_episodes">%1$s Episodes</string>
    <string name="m">%1$s m</string>
    <string name="watch_history">Watch History</string>
    <string name="rated_movies">My Ratings</string>
    <string name="sign_out">Sign Out</string>
    <string name="at">\@</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_re_about_to_sign_out_of_your_account">You’re about to sign out of your account.</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="this_list_has_no_movies">This list has no movies</string>
    <string name="zero">\.0</string>
    <string name="my_ratings">My Ratings</string>
    <string name="items">%1$s Items</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="list_name">List Name</string>
    <string name="explore_some_movies_on_home_or_search_and_then_create_your_movie_list">Collection Name</string>
    <string name="empty_overview_text">This season has no description.</string>
    <string name="one_season">%1$d Season</string>
    <string name="more_than_one_season">%1$d Seasons</string>
    <string name="internet_connection">There is no internet connection.</string>
    <string name="try_again">Try Again</string>
    <string name="you_must_be_logged_in_to_see_the_profile">You must be logged in to see the profile and use additional features.</string>
    <string name="new_list">New List</string>
    <string name="log_in">Log In</string>
    <string name="you_must_be_logged_in_to_use_list_features">You must be logged in to use lists feature.</string>
    <string name="empty">Empty</string>
    <string name="create_a_new_list">Create New Collection</string>
    <string name="save_to">Save to…</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="hours_pattern">%1$s hours</string>
    <string name="minutes_pattern">%1$s minutes</string>
    <string name="hours_minutes_pattern">%1$s h %2$s m</string>
    <string name="you_must_be_logged_in_to_save_a_movie">You must be logged in to save a movie</string>
    <string name="this_list_has_no_lists">No lists found</string>
    <string name="episode_title">%1$d. %2$s</string>
    <string name="youtube">YouTube</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="tiktok">Tiktok</string>
    <string name="welcome_back_to_cineverse">Welcome back to CineVerse!</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_as_guest">Join as Guest</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="join_cineverse">Join CineVerse</string>
    <string name="let_s_get_you_set_up_we_ll_take_you_to_the_website_to_create_your_account">Let\'s get you set up! We\'ll take you to the website to create your account.</string>
    <string name="logout_dialog_title">Are you sure you want to logout?</string>
    <string name="logout_dialog_caption">You can always sign back in with your account.</string>
    <string name="login_dialog_title">You\'re Almost There!</string>
    <string name="rate_the_movie">Rate the Movie</string>
    <string name="login_dialog_caption">Log in to save movies, create collections, and get personalized recommendations.</string>
    <string name="not_now">Not Now</string>
    <string name="login_or_signup">Login &amp; Sign Up</string>
    <string name="tap_to_add_name">Tap to add your name</string>
    <string name="to_personalize">to personalize your profile</string>
    <string name="settings">Settings</string>
    <string name="language">language</string>
    <string name="content_preferences">Content Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="my_collections">My Collections</string>
    <string name="history">History</string>
    <string name="get_started">Get Started</string>
    <string name="onboarding_first_page_title">Welcome to Your Movie Universe</string>
    <string name="onboarding_first_page_des"><![CDATA[Discover, track, and rate your favorite movies & series.]]></string>
    <string name="onboarding_second_page_des">Your Watchlist. Your Ratings. All in One Place.</string>
    <string name="onboarding_third_page_des">Answer fun questions to get handpicked recommendations.</string>
    <string name="onboarding_third_page_title">Personalized Recommendations</string>
    <string name="onboarding_second_page_title">Track Everything</string>
    <string name="season_number">%1$s Seasons</string>
    <string name="movie">MOVIE</string>
    <string name="series">SERIES</string>
    <string name="star_icon_for_rating">star icon for rating</string>
    <string name="clock_icon_for_duration">clock icon for movie duration</string>
    <string name="movie_image">movie image</string>
    <string name="back_arrow_icon">back arrow icon</string>
    <string name="tv_show_image">tv show image</string>
    <string name="clock_icon_for_number_of_seasons">clock icon for number of seasons</string>
    <string name="calendar_icon_for_release_date">calendar icon for release date</string>
    <string name="welcome">Welcome</string>
    <string name="behind_the_scenes">Behind the Scenes</string>
    <string name="give_it_stars">Give it Stars!</string>
    <string name="you_rated_it">You rated it</string>
    <string name="let_the_world_know_how_you_felt">Let the world know how you felt.</string>
    <string name="tap_to_change_your_rating">Tap to change your rating</string>
    <string name="arrow">arrow</string>
    <string name="no_history_yet" translatable="false">No History Yet</string>
    <string name="find_something_to_watch" translatable="false">Find Something to Watch</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="login_or_sign_up">Login or Sign Up</string>
    <string name="tap_to_add_your_name">Tap to add your name</string>
    <string name="to_personalize_your_profile">to personalize your profile</string>
    <string name="choose_how_you_d_like_to_handle_sensitive_or_revealing_images_in_the_app">Choose how you’d like to handle sensitive or revealing images in the app.</string>
    <string name="hide_explicit_content">Hide Explicit Content</string>
    <string name="hides_revealing_or_inappropriate_posters_e_g_nudity_strong_sexual_content">Hides revealing or inappropriate posters (e.g. nudity, strong sexual content).</string>
    <string name="strict_filtering">Strict Filtering</string>
    <string name="go_to_website">Go to Website</string>
    <string name="e_g_my_watchlist">e.g. My Watchlist</string>
    <string name="match">Match</string>
    <string name="me">Me</string>
    <string name="title_need_more_to_watch">Need More to Watch?</string>
    <string name="browse_everything">Browse Everything</string>
    <string name="explore_all_movies_and_series_by_genre_or_search_for_anything_you_like">Explore all movies and series by genre or search for anything you like.</string>
</resources>