<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/outline_home"
        android:title="@string/home" />

    <item
        android:id="@+id/exploringFragment"
        android:enabled="true"
        android:icon="@drawable/outline_search"
        android:title="@string/explore" />

    <item
        android:id="@+id/myListFragment"
        android:enabled="true"
        android:icon="@drawable/outline_magic_stick"
        android:title="@string/match" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/outline_user_square"
        android:title="@string/me" />

</menu>