<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.movieDetails.MovieDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rating_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rating_id"
            style="@style/Title.SM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/rating_title"
            android:textColor="@color/shade_primary"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:isVisible="@{viewModel.uiState.login}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/give_it_stars_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rating_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_id">

            <ImageView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/circle_shape_for_star"
                android:contentDescription="@string/star_icon_for_rating"
                android:padding="12dp"
                android:src="@drawable/star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/brand_primary" />

            <TextView
                android:id="@+id/give_it_stars_text"
                style="@style/Title.SM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/give_it_stars"
                android:textColor="@color/shade_primary"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/star"
                app:layout_constraintTop_toTopOf="@id/star" />

            <TextView
                android:id="@+id/subtitle"
                style="@style/Body_SM.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_the_world_know_how_you_felt"
                android:textColor="@color/shade_secondary"
                android:textFontWeight="500"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/star"
                app:layout_constraintStart_toStartOf="@id/give_it_stars_text"
                app:layout_constraintTop_toBottomOf="@id/give_it_stars_text" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/arrow"
                android:src="@drawable/outline_alt_arrow_right"
                app:layout_constraintBottom_toBottomOf="@id/star"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/star"
                app:tint="@color/shade_tertiary" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>