<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.profile.watchhistory.WatchHistoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/img_lost_connection"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:backgroundTint="@color/brand_tertiary"
            app:cardCornerRadius="@dimen/radius_full"
            app:cardElevation="@null"
            app:layout_constraintBottom_toTopOf="@+id/title_lost_connection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:contentDescription="@string/oops_no_internet"
                android:src="@drawable/outline_history"
                app:tint="@color/brand_primary" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title_lost_connection"
            style="@style/Title.SM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_history_yet"
            android:textColor="@color/shade_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_lost_connection"
            style="@style/Body_SM.Medium"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:gravity="center"
            android:lines="2"
            android:text="It’s quiet in here… Start watching and we’ll keep track for you."
            android:textColor="@color/shade_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_lost_connection" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_retry"
            style="@style/Body_SM.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:backgroundTint="@color/button_primary"
            android:onClick="@{()-> viewModel.onClickToExploreScreen()}"
            android:paddingHorizontal="@dimen/spacing_medium"
            android:paddingVertical="12dp"
            android:stateListAnimator="@null"
            android:text="@string/find_something_to_watch"
            android:textAllCaps="false"
            android:textColor="@color/button_onPrimary"
            app:cornerRadius="@dimen/radius_md"
            app:layout_constraintEnd_toEndOf="@id/description_lost_connection"
            app:layout_constraintStart_toStartOf="@id/description_lost_connection"
            app:layout_constraintTop_toBottomOf="@+id/description_lost_connection" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>